[package]
name = "galton"
version = "0.1.0"
authors = ["Stepan Kuzmin <to.stepan.kuzmin@gmail.com>"]

[dependencies]
bincode = "1.0.1"
geojson = "0.15.0"
num-traits = "0.2"
osmpbfreader = "0.13.0"
petgraph = { version = "0.4.13", features = ["serde-1"] }
rstar = { version = "0.3.0", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"